# openmagnets

./: .fortls  .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: ci.yml  package.yml  publish.yml
fortran/: om_assemble.f90  om_bc.f90  om_dense.f90  om_elements_tet.f90  om_kinds.f90  om_materials.f90  om_mesh.f90  om_native_capi.f90  om_post.f90  om_solve.f90
scripts/: build_native.py
src/openmagnets/: __init__.py  _native.py  io.py  materials.py  mesh.py  post.py  problem.py  typing.py
tests/: conftest.py  test_external_gradients.py  test_gradients.py  test_native_solver.py  test_public_api.py  test_self_excluded_external_gradients.py
